<resources>
    <string name="app_name">Love Quotes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Love Quotes</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type here…</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="quotes">Quotes</string>
    <string name="contact">Contact</string>
    <string name="favorites">Favorites</string>
    <string name="exit">Exit</string>
    <string name="communicate">Communicate</string>
    <string name="developerName">Ajith Kumar K</string>
    <string name="developerPlace">Tamilnadu, india</string>
    <string name="developerEmail">ajithpoison@gmail.com</string>
    <string name="eMail">Email</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="full_quote">Full Quote</string>

    <!-- Emoji -->
    <string name="sparklingHeartEmoji">&amp;#128150</string>
    <string name="ribbonHeartEmoji">&amp;#128157</string>

    <!-- Social Media -->
    <string name="instagramMail">\@AjithPoison</string>
    <string name="twitterMail">\@AjithPoison</string>
    <string name="facebookURL">facebook.com/ajithdauk</string>

</resources>
